# solo-hw-wallet

./: README.md  shell.nix
btc/: pyproject.toml  wallet.py
fido2/: ctaphid.c  ctaphid.h  storage.h
targets/stm32l432/src/: memory_layout.h
